# BoardGameAI

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Test.md  makefile
benchmark/: Benchmark.cpp  benchmark.cpp
schema/: request.schema.json  response.schema.json
schema/action_generators/: tic_tac_toe.schema.json  types.schema.json
schema/action_generators/gobang/: default.schema.json  neighbor.schema.json
schema/action_generators/gomoku/: default.schema.json  neighbor.schema.json
schema/action_generators/tic_tac_toe/: default.schema.json
schema/actions/: gobang.schema.json  gomoku.schema.json  tic_tac_toe.schema.json
schema/basic/: board.schema.json  id.schema.json
schema/games/: gobang.schema.json  gomoku.schema.json  tic_tac_toe.schema.json  types.schema.json
schema/player_details/requests/: mcts.schema.json  random_move.schema.json
schema/player_details/responses/: mcts.schema.json  random_move.schema.json
schema/players/: mcts.schema.json  random_move.schema.json  types.schema.json
schema/requests/: add_action_generator.schema.json  add_game.schema.json  add_player.schema.json  add_state.schema.json  echo.schema.json  generate_actions.schema.json  get_best_action.schema.json  query_details.schema.json  remove_action_generator.schema.json  remove_game.schema.json  remove_player.schema.json  remove_state.schema.json  run_games.schema.json  start_thinking.schema.json  stop_thinking.schema.json  take_action.schema.json
schema/responses/: add_action_generator.schema.json  add_game.schema.json  add_player.schema.json  add_state.schema.json  echo.schema.json  generate_actions.schema.json  get_best_action.schema.json  query_details.schema.json  remove_action_generator.schema.json  remove_game.schema.json  remove_player.schema.json  remove_state.schema.json  run_games.schema.json  start_thinking.schema.json  stop_thinking.schema.json  take_action.schema.json
schema/states/: gobang.schema.json  gomoku.schema.json  tic_tac_toe.schema.json
src/: Controller.cpp  Controller.hpp  Main.cpp
src/Chesses/Gobang/: Gobang.hpp
src/Chesses/Gobang/ActGens/: DefaultActGen.hpp  NeighborActGen.hpp
src/Chesses/TicTacToe/: TicTacToe.cpp  TicTacToe.hpp
src/Chesses/TicTacToe/ActGens/: DefaultActGen.cpp
src/Games/: ActGenBase.hpp  ActionGeneartor.cpp  ActionGenerator.hpp  Game.cpp  Game.hpp  GameBase.hpp
src/Games/AbstractGames/GridBoardGame/: Game.hpp
src/Games/AbstractGames/MNKGame/: Game.hpp
src/Games/AbstractGames/MNKGame/ActionGenerators/: Default.hpp  Neighbor.hpp
src/Games/Gobang/: Game.cpp  Game.hpp  Gobang.hpp
src/Games/Gobang/ActGens/: SmartActGen.hpp
src/Games/Gobang/ActionGenerators/: Default.hpp  Neighbor.cpp  Neighbor.hpp
src/Games/Gomoku/: Game.hpp
src/Games/Gomoku/ActionGenerators/: Default.hpp  Neighbor.hpp
src/Games/GridBoardGame/: Game.hpp
src/Games/GridBoardGame/ActionGenerators/: EmptyGrids.hpp
src/Games/TicTacToe/: Game.cpp  Game.hpp  TicTacToe.cpp  TicTacToe.hpp
src/Games/TicTacToe/ActGens/: DefaultActGen.cpp  DefaultActGen.hpp
src/Games/TicTacToe/ActionGenerators/: Default.cpp  Default.hpp
src/Players/: Player.cpp  Player.hpp  PlayerBase.hpp
src/Players/HumanPlayer/: HumanPlayer.hpp
src/Players/MCTS/: MCTS.hpp  ParallelMCTS.hpp  Player.cpp  Player.hpp
src/Players/RandomMove/: Player.cpp  Player.hpp
src/Players/RandomPlayer/: RandomPlayer.cpp  RandomPlayer.hpp
src/Server/: Server.cpp  Server.hpp
src/Utilities/: ConcurrentIDMap.hpp  DFA.hpp  Hash.hpp  Helpers.hpp  Literals.hpp  Parallel.hpp  StaticMemoryPool.hpp  ThreadSafeQueue.hpp  Utilities.cpp  Utilities.hpp
test/: Test.cpp
test/Games/TicTacToe/: Game.cpp
test/Utilities/: Utilities.cpp
